# ai_calendar

./: .env.example  .env.prod.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
apps/backend/: .dockerignore  Dockerfile  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_add_yandex.py  0003_categories.py  0004_telegram_link.py  0005_task_planner.py  0006_places.py  0007_daily_briefings.py  0008_drop_google.py  0009_user_onboarding.py
apps/backend/app/: config.py  deps.py  logging_setup.py  main.py  notifications.py  security.py
apps/backend/app/agent/: graph.py  prompts.py  runner.py  tools.py
apps/backend/app/api/: biometrics.py  categories.py  chat.py  events.py  health.py  integrations.py  me.py  places.py  replan.py  router.py  scheduler.py  schemas.py  stats.py  tasks.py
apps/backend/app/auth/: __init__.py  providers.py  users.py
apps/backend/app/biometrics/: __init__.py  advisor.py  insights.py  service.py  whoop.py
apps/backend/app/calendar/: caldav.py  service.py
apps/backend/app/categorize/: __init__.py  llm.py  rules.py  service.py
apps/backend/app/db/: __init__.py  base.py  models.py
apps/backend/app/places/: __init__.py  service.py
apps/backend/app/scheduler/: __init__.py  greedy.py  models.py  planner.py  service.py  windows.py
apps/backend/app/workers/: tasks.py
apps/backend/tests/: conftest.py  test_agent_runner.py  test_agent_tools.py  test_categorize_rules.py  test_health.py  test_places.py  test_scheduler.py
apps/backend/tests/scheduler/: conftest.py  test_buffer_after_meeting.py  test_deadline.py  test_dependencies.py  test_focus_match.py  test_greedy_basic.py  test_overflow.py  test_splittable.py  test_windows.py
apps/tg-bot/: Dockerfile  pyproject.toml
apps/tg-bot/app/: __init__.py  backend_client.py  config.py  formatting.py  main.py  push_server.py  state.py  stt.py
apps/tg-bot/app/handlers/: chat.py  commands.py  inline.py  start.py  voice.py
apps/web/: .dockerignore  Dockerfile.prod  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/calendar/: page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/src/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/src/app/stats/: page.tsx
apps/web/src/components/: chat-panel.tsx  event-popover.tsx  onboarding-gate.tsx  onboarding-tour.tsx  preferences-card.tsx  recovery-widget.tsx  replan-diff.tsx  task-inbox.tsx  tasks-drawer.tsx  yandex-connect-modal.tsx
apps/web/src/lib/: api.ts
deploy/: Caddyfile  Dockerfile.backup  README.md  backup.sh
