[project]
name = "ai-calendar-tg-bot"
version = "0.1.0"
description = "AI Calendar Telegram bot — thin wrapper over the backend API"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "httpx>=0.27.2",
    "httpx-sse>=0.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "tzdata>=2024.2",
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
# RUF001 flags Cyrillic characters as "ambiguous" with their Latin lookalikes.
# All user-facing messages here are intentionally Russian, so this rule is noise.
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
